# CmakeCpp

./: .editorconfig  .gitmodules  CLAUDE.md  CMakeLists.txt  DriveChecker1.cpp  DriveChecker2.cpp  DriveChecker2.h  DriveChecker3.cpp  DriveChecker3.h  DriveChecker4.cpp  DriveChecker4.h  DriveChekcer1.cpp  DriveChekcer1.h  README.md  TestAsync.h  TestOrder.h  async.cpp  async.h  benchmark.cpp  calculator.h  common.cpp  common.h  convert.cpp  convert.h  coroutine.cpp  coroutine.h  di.h  divide.cpp  divide.h  hello.ixx  main.cpp  my_class.cpp  my_class.h  precise_wait.cpp  precise_wait.h  presentation_script.md  printer.cpp  printer.h  stop_watch.cpp  stop_watch.h  (+3 more)
.claude/: settings.local.json
.github/workflows/: cmake.yml
ExeProject/: CMakeLists.txt  ModuleShared.h  ModuleShared.lib  main.cpp
HelloWorld/: CMakeLists.txt
LibProject/: CMakeLists.txt  main.cpp
LibProject/ModuleShared/: CMakeLists.txt  ModuleShared.cpp  ModuleShared.h
LibProject/ModuleStatic/: CMakeLists.txt  ModuleStatic.cpp  ModuleStatic.h
Timer/: CMakeLists.txt
Timer/include/: Timer.h
Timer/src/: Timer.cpp
async_data/: CMakeLists.txt  async_data.cpp  async_data.h  async_data_async.cpp  async_data_async.h  common.h
boost/: di.h
cmakes/: google_test.cmake
di/: calculation_manager.cpp  calculation_manager.h  data_manager.cpp  data_manager.h  di_module.h  engine.cpp  engine.h  file_manager.cpp  file_manager.h  logger.cpp  logger.h  statistics_manager.cpp  statistics_manager.h
include/: hello.h
io_context/: CMakeLists.txt  README.md  async_example.cpp  basic_example.cpp  timer_example.cpp
lib/: CMakeLists.txt  hello.cpp
math_lib/: CMakeLists.txt  math_operations.cpp  math_operations.h
origin/: calculation_manager.cpp  calculation_manager.h  data_manager.cpp  data_manager.h  engine.cpp  engine.h  file_manager.cpp  file_manager.h  logger.cpp  logger.h  statistics_manager.cpp  statistics_manager.h
socket/: CMakeLists.txt  README.md  connection_base.cpp  connection_base.hpp  delimited_client.cpp  delimited_connection.cpp  delimited_connection.hpp  delimited_server.cpp  echo_client.cpp  echo_server.cpp  header_client.cpp  header_connection.cpp  header_connection.hpp  header_server.cpp
src/: CMakeLists.txt  hello_cmn.cpp  hello_msw.cpp  hello_unix.cpp
src/msw/: hello.cpp
src/unix/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt  calculator_test.cpp  main.cpp
tests/: CMakeLists.txt  test_async_data.cpp  test_async_data_async.cpp  test_math_operations.cpp
